@@ -1,8 +1,6 @@
 package uk.gov.hmcts.reform.fpl.handlers;
 
-import org.apache.commons.codec.binary.Base64;
 import org.apache.commons.lang3.RandomUtils;
-import org.json.JSONObject;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -42,14 +40,12 @@ import uk.gov.hmcts.reform.fpl.service.email.content.AdditionalApplicationsUploa
 import uk.gov.hmcts.reform.fpl.service.others.OtherRecipientsInbox;
 import uk.gov.hmcts.reform.fpl.service.representative.RepresentativeNotificationService;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Stream;
 
-import static java.nio.charset.StandardCharsets.ISO_8859_1;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptySet;
 import static org.mockito.ArgumentMatchers.any;
@@ -59,8 +55,6 @@ import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
-import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.CASE_TYPE;
-import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.fpl.NotifyTemplates.INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_CTSC;
 import static uk.gov.hmcts.reform.fpl.NotifyTemplates.INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_PARTIES_AND_OTHERS;
 import static uk.gov.hmcts.reform.fpl.enums.ApplicantType.LOCAL_AUTHORITY;
@@ -75,12 +69,33 @@ import static uk.gov.hmcts.reform.fpl.handlers.NotificationEventHandlerTestData.
 import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.caseData;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.wrapElements;
-import static uk.gov.hmcts.reform.fpl.utils.TestDataHelper.DOCUMENT_CONTENT;
 import static uk.gov.hmcts.reform.fpl.utils.TestDataHelper.testDocumentReference;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 class AdditionalApplicationsUploadedEventHandlerTest {
+    private static final DocumentReference TEST_DOCUMENT = mock(DocumentReference.class);
+    private static final Long CASE_ID = 12345L;
+    private static final String EMAIL_REP_1 = "email-rep1@test.com";
+    private static final String EMAIL_REP_2 = "email-rep2@test.com";
+    private static final Set<String> EMAIL_REPS = new HashSet<>(Set.of(EMAIL_REP_1, EMAIL_REP_2));
+    private static final String DIGITAL_REP_1 = "digital-rep1@test.com";
+    private static final String DIGITAL_REP_2 = "digital-rep2@test.com";
+    private static final Set<String> DIGITAL_REPS = new HashSet<>(Set.of(DIGITAL_REP_1, DIGITAL_REP_2));
+    private static final List<Element<Other>> NO_RECIPIENTS = Collections.emptyList();
+    private static final List<Element<Other>> SELECTED_OTHERS = List.of(element(mock(Other.class)));
+    private static final List<Element<Respondent>> SELECTED_RESPONDENTS = List.of(element(mock(Respondent.class)));
+    private static final DocumentReference C2_DOCUMENT = testDocumentReference();
+    private static final DocumentReference OTHER_APPLICATION_DOCUMENT = testDocumentReference();
+    private static final DocumentReference SUPPLEMENT_1 = testDocumentReference();
+    private static final DocumentReference SUPPLEMENT_2 = testDocumentReference();
+    private static final DocumentReference SUPPORTING_DOCUMENT_1 = testDocumentReference();
+    private static final DocumentReference SUPPORTING_DOCUMENT_2 = testDocumentReference();
+    private static final OrderApplicant ORDER_APPLICANT_LA = OrderApplicant.builder()
+        .type(LOCAL_AUTHORITY)
+        .name(LOCAL_AUTHORITY_NAME)
+        .build();
+
     @Mock
     private RequestData requestData;
     @Mock
@@ -88,7 +103,7 @@ class AdditionalApplicationsUploadedEventHandlerTest {
     @Mock
     private CourtService courtService;
     @Mock
-    private AdditionalApplicationsUploadedEmailContentProvider additionalApplicationsUploadedEmailContentProvider;
+    private AdditionalApplicationsUploadedEmailContentProvider contentProvider;
     @Mock
     private InboxLookupService inboxLookupService;
     @Mock
@@ -101,116 +116,102 @@ class AdditionalApplicationsUploadedEventHandlerTest {
     private SendDocumentService sendDocumentService;
     @Mock
     private FeatureToggleService featureToggleService;
+    @Mock
+    private CaseData caseData;
+    @Mock
+    private AdditionalApplicationsUploadedTemplate notifyData;
+
     @InjectMocks
     private AdditionalApplicationsUploadedEventHandler underTest;
 
-    private static final CaseData CASE_DATA = mock(CaseData.class);
-    private static final DocumentReference TEST_DOCUMENT = mock(DocumentReference.class);
-    private static final Long CASE_ID = 12345L;
-
-    private static final String EMAIL_REP_1 = "email-rep1@test.com";
-    private static final String EMAIL_REP_2 = "email-rep2@test.com";
-    private static final Set<String> EMAIL_REPS = new HashSet<>(Arrays.asList(EMAIL_REP_1, EMAIL_REP_2));
-    private static final String DIGITAL_REP_1 = "digital-rep1@test.com";
-    private static final String DIGITAL_REP_2 = "digital-rep2@test.com";
-    private static final Set<String> DIGITAL_REPS = new HashSet<>(Arrays.asList(DIGITAL_REP_1, DIGITAL_REP_2));
-    private static final List<Element<Other>> NO_RECIPIENTS = Collections.emptyList();
-    private static final List<Element<Other>> SELECTED_OTHERS = List.of(element(mock(Other.class)));
-    private static final List<Element<Respondent>> SELECTED_RESPONDENTS = List.of(element(mock(Respondent.class)));
-    private static final DocumentReference C2_DOCUMENT = testDocumentReference();
-    private static final DocumentReference OTHER_APPLICATION_DOCUMENT = testDocumentReference();
-    private static final DocumentReference SUPPLEMENT_1 = testDocumentReference();
-    private static final DocumentReference SUPPLEMENT_2 = testDocumentReference();
-    private static final DocumentReference SUPPORTING_DOCUMENT_1 = testDocumentReference();
-    private static final DocumentReference SUPPORTING_DOCUMENT_2 = testDocumentReference();
-    private static final OrderApplicant ORDER_APPLICANT_LA = OrderApplicant.builder()
-        .type(LOCAL_AUTHORITY).name(LOCAL_AUTHORITY_NAME).build();
-
-    final String subjectLine = "Lastname, SACCCCCCCC5676576567";
-    AdditionalApplicationsUploadedTemplate additionalApplicationsParameters =
-        getAdditionalApplicationsUploadedTemplateParameters();
-
     @BeforeEach
     void before() {
-        given(CASE_DATA.getId()).willReturn(CASE_ID);
-        given(additionalApplicationsUploadedEmailContentProvider.getNotifyData(CASE_DATA))
-            .willReturn(additionalApplicationsParameters);
+        given(caseData.getId()).willReturn(CASE_ID);
+        given(contentProvider.getNotifyData(caseData)).willReturn(notifyData);
     }
 
     @Test
     void shouldNotifyDigitalRepresentativesOnAdditionalApplicationsUploadWhenServingOthersIsToggledOn() {
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(true);
 
-        given(CASE_DATA.getAdditionalApplicationsBundle())
-            .willReturn(wrapElements(AdditionalApplicationsBundle.builder()
-                .c2DocumentBundle(C2DocumentBundle.builder().document(TEST_DOCUMENT)
-                    .respondents(emptyList()).others(emptyList()).build())
-                .build()));
+        given(caseData.getAdditionalApplicationsBundle()).willReturn(wrapElements(
+            AdditionalApplicationsBundle.builder()
+                .c2DocumentBundle(C2DocumentBundle.builder()
+                    .document(TEST_DOCUMENT)
+                    .respondents(emptyList())
+                    .others(emptyList())
+                    .build())
+                .build()
+        ));
 
-        given(representativesInbox.getEmailsByPreference(CASE_DATA, DIGITAL_SERVICE)).willReturn(DIGITAL_REPS);
+        given(representativesInbox.getEmailsByPreference(caseData, DIGITAL_SERVICE)).willReturn(DIGITAL_REPS);
         given(otherRecipientsInbox.getNonSelectedRecipients(
-            eq(DIGITAL_SERVICE), eq(CASE_DATA), eq(NO_RECIPIENTS), any()))
-            .willReturn(Collections.emptySet());
-        given(representativesInbox.getNonSelectedRespondentsRecipients(
-            eq(DIGITAL_SERVICE), eq(CASE_DATA), eq(emptyList()), any()))
-            .willReturn(Collections.emptySet());
+            eq(DIGITAL_SERVICE), eq(caseData), eq(NO_RECIPIENTS), any()
+        )).willReturn(Collections.emptySet());
+        given(representativesInbox.getNonSelectedRespondentRecipients(
+            eq(DIGITAL_SERVICE), eq(caseData), eq(emptyList()), any()
+        )).willReturn(Collections.emptySet());
 
         underTest.notifyDigitalRepresentatives(
-            new AdditionalApplicationsUploadedEvent(CASE_DATA, ORDER_APPLICANT_LA));
+            new AdditionalApplicationsUploadedEvent(caseData, ORDER_APPLICANT_LA)
+        );
 
         verify(representativeNotificationService).sendNotificationToRepresentatives(
-            CASE_ID,
-            additionalApplicationsParameters,
-            DIGITAL_REPS,
-            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_PARTIES_AND_OTHERS);
+            CASE_ID, notifyData, DIGITAL_REPS, INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_PARTIES_AND_OTHERS
+        );
     }
 
     @Test
     void shouldNotifyEmailRepresentativesOnAdditionalApplicationsUploadWhenServingOthersIsToggledOn() {
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(true);
-        given(CASE_DATA.getAdditionalApplicationsBundle())
-            .willReturn(wrapElements(AdditionalApplicationsBundle.builder()
-                .c2DocumentBundle(C2DocumentBundle.builder().document(TEST_DOCUMENT)
+        given(caseData.getAdditionalApplicationsBundle()).willReturn(wrapElements(
+            AdditionalApplicationsBundle.builder()
+                .c2DocumentBundle(C2DocumentBundle.builder()
+                    .document(TEST_DOCUMENT)
                     .respondents(emptyList())
-                    .others(emptyList()).build())
-                .build()));
-        given(representativesInbox.getEmailsByPreference(CASE_DATA, EMAIL)).willReturn(EMAIL_REPS);
-        given(otherRecipientsInbox.getNonSelectedRecipients(eq(EMAIL), eq(CASE_DATA), eq(NO_RECIPIENTS), any()))
+                    .others(emptyList())
+                    .build())
+                .build()
+        ));
+
+        given(representativesInbox.getEmailsByPreference(caseData, EMAIL)).willReturn(EMAIL_REPS);
+        given(otherRecipientsInbox.getNonSelectedRecipients(eq(EMAIL), eq(caseData), eq(NO_RECIPIENTS), any()))
             .willReturn(Collections.emptySet());
-        given(representativesInbox.getNonSelectedRespondentsRecipients(
-            eq(EMAIL), eq(CASE_DATA), eq(emptyList()), any()))
+        given(representativesInbox.getNonSelectedRespondentRecipients(eq(EMAIL), eq(caseData), eq(emptyList()), any()))
             .willReturn(Collections.emptySet());
 
         underTest.notifyEmailServedRepresentatives(
-            new AdditionalApplicationsUploadedEvent(CASE_DATA, ORDER_APPLICANT_LA));
+            new AdditionalApplicationsUploadedEvent(caseData, ORDER_APPLICANT_LA)
+        );
 
         verify(representativeNotificationService).sendNotificationToRepresentatives(
-            CASE_ID,
-            additionalApplicationsParameters,
-            EMAIL_REPS,
-            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_PARTIES_AND_OTHERS);
+            CASE_ID, notifyData, EMAIL_REPS, INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_PARTIES_AND_OTHERS
+        );
     }
 
     @Test
     void shouldNotifyLocalAuthorityWhenApplicantIsLocalAuthorityAndServingOthersIsToggledOn() {
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(true);
-        given(CASE_DATA.getAdditionalApplicationsBundle())
-            .willReturn(wrapElements(AdditionalApplicationsBundle.builder()
-                .c2DocumentBundle(C2DocumentBundle.builder().document(TEST_DOCUMENT)
-                    .applicantName(LOCAL_AUTHORITY_NAME).others(emptyList()).build())
-                .build()));
-        given(CASE_DATA.getCaseLocalAuthorityName()).willReturn(LOCAL_AUTHORITY_NAME);
+        given(caseData.getAdditionalApplicationsBundle()).willReturn(wrapElements(
+            AdditionalApplicationsBundle.builder()
+                .c2DocumentBundle(C2DocumentBundle.builder()
+                    .document(TEST_DOCUMENT)
+                    .applicantName(LOCAL_AUTHORITY_NAME)
+                    .others(emptyList())
+                    .build())
+                .build()
+        ));
+        given(caseData.getCaseLocalAuthorityName()).willReturn(LOCAL_AUTHORITY_NAME);
         given(inboxLookupService.getRecipients(
-            LocalAuthorityInboxRecipientsRequest.builder().caseData(CASE_DATA).build()))
-            .willReturn(Set.of(LOCAL_AUTHORITY_EMAIL_ADDRESS));
+            LocalAuthorityInboxRecipientsRequest.builder().caseData(caseData).build()
+        )).willReturn(Set.of(LOCAL_AUTHORITY_EMAIL_ADDRESS));
 
-        underTest.notifyApplicant(new AdditionalApplicationsUploadedEvent(CASE_DATA, ORDER_APPLICANT_LA));
+        underTest.notifyApplicant(new AdditionalApplicationsUploadedEvent(caseData, ORDER_APPLICANT_LA));
 
         verify(notificationService).sendEmail(
-            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_PARTIES_AND_OTHERS,
-            Set.of(LOCAL_AUTHORITY_EMAIL_ADDRESS),
-            additionalApplicationsParameters,
-            CASE_ID.toString());
+            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_PARTIES_AND_OTHERS, Set.of(LOCAL_AUTHORITY_EMAIL_ADDRESS),
+            notifyData, CASE_ID.toString()
+        );
     }
 
     @Test
@@ -218,14 +219,19 @@ class AdditionalApplicationsUploadedEventHandlerTest {
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(true);
 
         final String applicantName = "someone";
-        given(CASE_DATA.getAdditionalApplicationsBundle())
-            .willReturn(wrapElements(AdditionalApplicationsBundle.builder()
-                .c2DocumentBundle(C2DocumentBundle.builder().document(TEST_DOCUMENT)
-                    .applicantName(applicantName).others(emptyList()).build())
-                .build()));
+        given(caseData.getAdditionalApplicationsBundle()).willReturn(wrapElements(
+            AdditionalApplicationsBundle.builder()
+                .c2DocumentBundle(C2DocumentBundle.builder()
+                    .document(TEST_DOCUMENT)
+                    .applicantName(applicantName)
+                    .others(emptyList())
+                    .build())
+                .build()
+        ));
 
-        underTest.notifyApplicant(new AdditionalApplicationsUploadedEvent(CASE_DATA,
-            OrderApplicant.builder().type(OTHER).name(applicantName).build()));
+        underTest.notifyApplicant(new AdditionalApplicationsUploadedEvent(caseData,
+            OrderApplicant.builder().type(OTHER).name(applicantName).build())
+        );
 
         verifyNoInteractions(notificationService);
     }
@@ -235,98 +241,112 @@ class AdditionalApplicationsUploadedEventHandlerTest {
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(true);
 
         final String applicantName = "John Smith";
-        given(CASE_DATA.getAdditionalApplicationsBundle())
-            .willReturn(wrapElements(AdditionalApplicationsBundle.builder()
-                .c2DocumentBundle(C2DocumentBundle.builder().document(TEST_DOCUMENT)
-                    .applicantName(applicantName).others(emptyList()).build())
-                .build()));
+        given(caseData.getAdditionalApplicationsBundle()).willReturn(wrapElements(
+            AdditionalApplicationsBundle.builder()
+                .c2DocumentBundle(C2DocumentBundle.builder()
+                    .document(TEST_DOCUMENT)
+                    .applicantName(applicantName)
+                    .others(emptyList())
+                    .build())
+                .build()
+        ));
 
         final Respondent respondent = Respondent.builder()
             .party(RespondentParty.builder().firstName("John").lastName("Smith").build())
-            .solicitor(RespondentSolicitor.builder().build()).build();
-        given(CASE_DATA.getRespondents1()).willReturn(wrapElements(respondent));
+            .solicitor(RespondentSolicitor.builder().build())
+            .build();
+
+        given(caseData.getRespondents1()).willReturn(wrapElements(respondent));
 
         underTest.notifyApplicant(new AdditionalApplicationsUploadedEvent(
-            CASE_DATA, OrderApplicant.builder().type(RESPONDENT).name(applicantName).build()));
+            caseData, OrderApplicant.builder().type(RESPONDENT).name(applicantName).build())
+        );
 
         verifyNoInteractions(notificationService);
     }
 
     @Test
     void shouldNotifyRespondentWhenApplicantIsRespondentAndServingOthersIsToggledOn() {
-        List<Element<Respondent>> respondents = wrapElements(Respondent.builder()
+        List<Element<Respondent>> respondents = wrapElements(
+            Respondent.builder()
                 .party(RespondentParty.builder().firstName("John").lastName("Smith").build())
-                .solicitor(RespondentSolicitor.builder().email("respondent1@test.com").build()).build(),
+                .solicitor(RespondentSolicitor.builder().email("respondent1@test.com").build())
+                .build(),
             Respondent.builder()
                 .party(RespondentParty.builder().firstName("Ross").lastName("Bob").build())
-                .solicitor(RespondentSolicitor.builder().build()).build());
+                .solicitor(RespondentSolicitor.builder().build())
+                .build()
+        );
 
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(true);
-        given(CASE_DATA.getAllRespondents()).willReturn(respondents);
-        given(CASE_DATA.getAdditionalApplicationsBundle())
-            .willReturn(wrapElements(AdditionalApplicationsBundle.builder()
-                .c2DocumentBundle(C2DocumentBundle.builder().document(TEST_DOCUMENT)
-                    .applicantName("John Smith").others(emptyList()).build())
-                .build()));
+        given(caseData.getAllRespondents()).willReturn(respondents);
+        given(caseData.getAdditionalApplicationsBundle()).willReturn(wrapElements(
+            AdditionalApplicationsBundle.builder()
+                .c2DocumentBundle(C2DocumentBundle.builder()
+                    .document(TEST_DOCUMENT)
+                    .applicantName("John Smith")
+                    .others(emptyList())
+                    .build())
+                .build()
+        ));
 
         OrderApplicant applicant = OrderApplicant.builder().name("John Smith").type(RESPONDENT).build();
-        underTest.notifyApplicant(new AdditionalApplicationsUploadedEvent(CASE_DATA, applicant));
+        underTest.notifyApplicant(new AdditionalApplicationsUploadedEvent(caseData, applicant));
 
         verify(notificationService).sendEmail(
-            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_PARTIES_AND_OTHERS,
-            Set.of("respondent1@test.com"),
-            additionalApplicationsParameters,
-            CASE_ID.toString());
+            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_PARTIES_AND_OTHERS, Set.of("respondent1@test.com"),
+            notifyData, CASE_ID.toString()
+        );
     }
 
     @Test
     void shouldNotBuildNotificationTemplateDataForEmailRepsWhenServingOthersIsToggledOnAndEmailRepsAreEmpty() {
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(true);
-        given(CASE_DATA.getAdditionalApplicationsBundle())
-            .willReturn(wrapElements(AdditionalApplicationsBundle.builder()
+        given(caseData.getAdditionalApplicationsBundle()).willReturn(wrapElements(
+            AdditionalApplicationsBundle.builder()
                 .otherApplicationsBundle(
                     OtherApplicationsBundle.builder().document(TEST_DOCUMENT).others(SELECTED_OTHERS).build())
-                .build()));
+                .build()
+        ));
 
-        given(representativesInbox.getEmailsByPreference(CASE_DATA, EMAIL)).willReturn(emptySet());
-        given(otherRecipientsInbox.getNonSelectedRecipients(eq(EMAIL), eq(CASE_DATA), eq(SELECTED_OTHERS), any()))
+        given(representativesInbox.getEmailsByPreference(caseData, EMAIL)).willReturn(emptySet());
+        given(otherRecipientsInbox.getNonSelectedRecipients(eq(EMAIL), eq(caseData), eq(SELECTED_OTHERS), any()))
             .willReturn(Collections.emptySet());
 
         underTest.notifyEmailServedRepresentatives(
-            new AdditionalApplicationsUploadedEvent(CASE_DATA, ORDER_APPLICANT_LA));
+            new AdditionalApplicationsUploadedEvent(caseData, ORDER_APPLICANT_LA)
+        );
 
         verifyNoMoreInteractions(representativeNotificationService);
     }
 
     @ParameterizedTest
     @MethodSource("applicationDataParams")
-    @SuppressWarnings("unchecked")
-    void shouldSendUploadedAdditionalApplicationsByPost(
-        AdditionalApplicationsBundle additionalApplicationsBundle,
-        List<DocumentReference> documents) {
+    void shouldSendUploadedAdditionalApplicationsByPost(AdditionalApplicationsBundle additionalApplicationsBundle,
+                                                        List<DocumentReference> documents) {
         final Representative representative1 = mock(Representative.class);
         final Representative representative2 = mock(Representative.class);
         final Representative representative3 = mock(Representative.class);
         final RespondentParty otherRespondent = mock(RespondentParty.class);
 
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(true);
-        given(CASE_DATA.getAdditionalApplicationsBundle()).willReturn(wrapElements(additionalApplicationsBundle));
-        given(sendDocumentService.getStandardRecipients(CASE_DATA))
+        given(caseData.getAdditionalApplicationsBundle()).willReturn(wrapElements(additionalApplicationsBundle));
+        given(sendDocumentService.getStandardRecipients(caseData))
             .willReturn(List.of(representative1, representative2, representative3));
-        given(otherRecipientsInbox.getNonSelectedRecipients(eq(POST), eq(CASE_DATA), eq(SELECTED_OTHERS), any()))
-            .willReturn((Set) Set.of(representative1));
-        given(representativesInbox.getNonSelectedRespondentsRecipients(
-            eq(POST), eq(CASE_DATA), eq(SELECTED_RESPONDENTS), any()))
-            .willReturn((Set) Set.of(representative3));
+        given(otherRecipientsInbox.getNonSelectedRecipients(eq(POST), eq(caseData), eq(SELECTED_OTHERS), any()))
+            .willReturn(Set.of(representative1));
+        given(representativesInbox.getNonSelectedRespondentRecipientsByPost(eq(caseData), eq(SELECTED_RESPONDENTS)))
+            .willReturn(Set.of(representative3));
         given(otherRecipientsInbox.getSelectedRecipientsWithNoRepresentation(SELECTED_OTHERS))
             .willReturn(Set.of(otherRespondent));
         given(representativesInbox.getSelectedRecipientsWithNoRepresentation(SELECTED_RESPONDENTS))
             .willReturn(Set.of(representative2));
 
         underTest.sendAdditionalApplicationsByPost(
-            new AdditionalApplicationsUploadedEvent(CASE_DATA, ORDER_APPLICANT_LA));
+            new AdditionalApplicationsUploadedEvent(caseData, ORDER_APPLICANT_LA)
+        );
 
-        verify(sendDocumentService).sendDocuments(CASE_DATA, documents, List.of(representative2, otherRespondent));
+        verify(sendDocumentService).sendDocuments(caseData, documents, List.of(representative2, otherRespondent));
         verifyNoInteractions(notificationService);
     }
 
@@ -334,7 +354,8 @@ class AdditionalApplicationsUploadedEventHandlerTest {
     void shouldNotSendApplicationsByPostWhenServingOthersIsToggledOff() {
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(false);
         underTest.sendAdditionalApplicationsByPost(
-            new AdditionalApplicationsUploadedEvent(CASE_DATA, ORDER_APPLICANT_LA));
+            new AdditionalApplicationsUploadedEvent(caseData, ORDER_APPLICANT_LA)
+        );
         verifyNoInteractions(sendDocumentService);
     }
 
@@ -343,41 +364,13 @@ class AdditionalApplicationsUploadedEventHandlerTest {
         given(featureToggleService.isServeOrdersAndDocsToOthersEnabled()).willReturn(false);
 
         underTest.notifyApplicant(new AdditionalApplicationsUploadedEvent(
-            CASE_DATA, OrderApplicant.builder().type(LOCAL_AUTHORITY).name(LOCAL_AUTHORITY_NAME).build()));
-        underTest.notifyEmailServedRepresentatives(new AdditionalApplicationsUploadedEvent(CASE_DATA, null));
-        underTest.notifyDigitalRepresentatives(new AdditionalApplicationsUploadedEvent(CASE_DATA, null));
+            caseData, OrderApplicant.builder().type(LOCAL_AUTHORITY).name(LOCAL_AUTHORITY_NAME).build())
+        );
+        underTest.notifyEmailServedRepresentatives(new AdditionalApplicationsUploadedEvent(caseData, null));
+        underTest.notifyDigitalRepresentatives(new AdditionalApplicationsUploadedEvent(caseData, null));
 
         verifyNoInteractions(notificationService);
         verifyNoInteractions(representativeNotificationService);
-    }
-
-    private static Stream<Arguments> applicationDataParams() {
-        C2DocumentBundle c2DocumentBundle = C2DocumentBundle.builder()
-            .document(C2_DOCUMENT)
-            .supplementsBundle(wrapElements(Supplement.builder().document(SUPPLEMENT_1).build()))
-            .supportingEvidenceBundle(
-                wrapElements(SupportingEvidenceBundle.builder().document(SUPPORTING_DOCUMENT_1).build()))
-            .others(SELECTED_OTHERS)
-            .respondents(SELECTED_RESPONDENTS).build();
-
-        OtherApplicationsBundle otherApplicationsBundle = OtherApplicationsBundle.builder()
-            .document(OTHER_APPLICATION_DOCUMENT)
-            .supplementsBundle(wrapElements(Supplement.builder().document(SUPPLEMENT_2).build()))
-            .supportingEvidenceBundle(
-                wrapElements(SupportingEvidenceBundle.builder().document(SUPPORTING_DOCUMENT_2).build()))
-            .others(SELECTED_OTHERS)
-            .respondents(SELECTED_RESPONDENTS).build();
-
-        return Stream.of(
-            Arguments.of(AdditionalApplicationsBundle.builder().c2DocumentBundle(c2DocumentBundle)
-                    .otherApplicationsBundle(otherApplicationsBundle).build(),
-                List.of(C2_DOCUMENT, SUPPLEMENT_1, SUPPORTING_DOCUMENT_1,
-                    OTHER_APPLICATION_DOCUMENT, SUPPLEMENT_2, SUPPORTING_DOCUMENT_2)),
-            Arguments.of(AdditionalApplicationsBundle.builder().c2DocumentBundle(c2DocumentBundle).build(),
-                List.of(C2_DOCUMENT, SUPPLEMENT_1, SUPPORTING_DOCUMENT_1)),
-            Arguments.of(AdditionalApplicationsBundle.builder()
-                    .otherApplicationsBundle(otherApplicationsBundle).build(),
-                List.of(OTHER_APPLICATION_DOCUMENT, SUPPLEMENT_2, SUPPORTING_DOCUMENT_2)));
     }
 
     @Test
@@ -385,18 +378,14 @@ class AdditionalApplicationsUploadedEventHandlerTest {
         CaseData caseData = caseData();
 
         given(requestData.userRoles()).willReturn(Set.of("caseworker-publiclaw-solicitor"));
-        given(courtService.getCourtEmail(caseData))
-            .willReturn("hmcts-non-admin@test.com");
-        given(additionalApplicationsUploadedEmailContentProvider.getNotifyData(caseData))
-            .willReturn(additionalApplicationsParameters);
+        given(courtService.getCourtEmail(caseData)).willReturn("hmcts-non-admin@test.com");
+        given(contentProvider.getNotifyData(caseData)).willReturn(notifyData);
 
         underTest.notifyAdmin(new AdditionalApplicationsUploadedEvent(caseData, ORDER_APPLICANT_LA));
 
         verify(notificationService).sendEmail(
-            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_CTSC,
-            "hmcts-non-admin@test.com",
-            additionalApplicationsParameters,
-            caseData.getId());
+            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_CTSC, "hmcts-non-admin@test.com", notifyData, caseData.getId()
+        );
     }
 
     @Test
@@ -410,42 +399,69 @@ class AdditionalApplicationsUploadedEventHandlerTest {
         given(courtService.getCourtEmail(caseData)).willReturn("Ctsc+test@gmail.com");
 
         given(inboxLookupService.getRecipients(
-            LocalAuthorityInboxRecipientsRequest.builder().caseData(caseData).build()))
-            .willReturn(Set.of(LOCAL_AUTHORITY_EMAIL_ADDRESS));
+            LocalAuthorityInboxRecipientsRequest.builder().caseData(caseData).build()
+        )).willReturn(Set.of(LOCAL_AUTHORITY_EMAIL_ADDRESS));
 
-        given(additionalApplicationsUploadedEmailContentProvider.getNotifyData(caseData))
-            .willReturn(additionalApplicationsParameters);
+        given(contentProvider.getNotifyData(caseData)).willReturn(notifyData);
 
         underTest.notifyAdmin(new AdditionalApplicationsUploadedEvent(caseData, ORDER_APPLICANT_LA));
 
         verify(notificationService).sendEmail(
-            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_CTSC,
-            CTSC_INBOX,
-            additionalApplicationsParameters,
-            caseData.getId());
+            INTERLOCUTORY_UPLOAD_NOTIFICATION_TEMPLATE_CTSC, CTSC_INBOX, notifyData, caseData.getId()
+        );
     }
 
     @Test
     void shouldNotNotifyHmctsAdminOnAdditionalApplicationsUpload() {
-        given(requestData.userRoles()).willReturn(new HashSet<>(Arrays.asList("caseworker", "caseworker-publiclaw",
-            "caseworker-publiclaw-courtadmin")));
+        given(requestData.userRoles()).willReturn(
+            new HashSet<>(Set.of("caseworker", "caseworker-publiclaw", "caseworker-publiclaw-courtadmin"))
+        );
 
-        underTest.notifyAdmin(new AdditionalApplicationsUploadedEvent(CASE_DATA, ORDER_APPLICANT_LA));
+        underTest.notifyAdmin(new AdditionalApplicationsUploadedEvent(caseData, ORDER_APPLICANT_LA));
 
         verifyNoInteractions(notificationService);
     }
 
-    private AdditionalApplicationsUploadedTemplate getAdditionalApplicationsUploadedTemplateParameters() {
-        String fileContent = new String(Base64.encodeBase64(DOCUMENT_CONTENT), ISO_8859_1);
-        JSONObject jsonFileObject = new JSONObject().put("file", fileContent);
-
-        return AdditionalApplicationsUploadedTemplate.builder()
-            .callout(subjectLine)
-            .lastName("Smith")
-            .childLastName("Jones")
-            .caseUrl("null/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345#C2Tab")
-            .documentLink(jsonFileObject.toMap())
-            .applicationTypes(Arrays.asList("C2", "C13A - Special guardianship order"))
+    private static Stream<Arguments> applicationDataParams() {
+        C2DocumentBundle c2DocumentBundle = C2DocumentBundle.builder()
+            .document(C2_DOCUMENT)
+            .supplementsBundle(wrapElements(Supplement.builder().document(SUPPLEMENT_1).build()))
+            .supportingEvidenceBundle(wrapElements(
+                SupportingEvidenceBundle.builder().document(SUPPORTING_DOCUMENT_1).build()
+            ))
+            .others(SELECTED_OTHERS)
+            .respondents(SELECTED_RESPONDENTS)
             .build();
+
+        OtherApplicationsBundle otherApplicationsBundle = OtherApplicationsBundle.builder()
+            .document(OTHER_APPLICATION_DOCUMENT)
+            .supplementsBundle(wrapElements(Supplement.builder().document(SUPPLEMENT_2).build()))
+            .supportingEvidenceBundle(wrapElements(
+                SupportingEvidenceBundle.builder().document(SUPPORTING_DOCUMENT_2).build()
+            ))
+            .others(SELECTED_OTHERS)
+            .respondents(SELECTED_RESPONDENTS)
+            .build();
+
+        return Stream.of(
+            Arguments.of(
+                AdditionalApplicationsBundle.builder()
+                    .c2DocumentBundle(c2DocumentBundle)
+                    .otherApplicationsBundle(otherApplicationsBundle)
+                    .build(),
+                List.of(
+                    C2_DOCUMENT, SUPPLEMENT_1, SUPPORTING_DOCUMENT_1, OTHER_APPLICATION_DOCUMENT, SUPPLEMENT_2,
+                    SUPPORTING_DOCUMENT_2
+                )
+            ),
+            Arguments.of(
+                AdditionalApplicationsBundle.builder().c2DocumentBundle(c2DocumentBundle).build(),
+                List.of(C2_DOCUMENT, SUPPLEMENT_1, SUPPORTING_DOCUMENT_1)
+            ),
+            Arguments.of(
+                AdditionalApplicationsBundle.builder().otherApplicationsBundle(otherApplicationsBundle).build(),
+                List.of(OTHER_APPLICATION_DOCUMENT, SUPPLEMENT_2, SUPPORTING_DOCUMENT_2)
+            )
+        );
     }
 }
